# cs562_engine

./: CMakeLists.txt  README.md
apps/irrmapgen/: CMakeLists.txt  irrmapgen.cpp  irrmapgen.hpp  irrmapgen_main.cpp  spherical_harmonic_approximator.cpp  spherical_harmonic_approximator.hpp
apps/project1/: CMakeLists.txt  app_component_bits.hpp  app_event.hpp  curve_walker.cpp  curve_walker.hpp  curve_walker_system.cpp  curve_walker_system.hpp  firefly_ai.cpp  firefly_ai.hpp  linked_stick_system.cpp  linked_stick_system.hpp  main.cpp  robot_arm_system.cpp  robot_arm_system.hpp  run_app.cpp  run_app.hpp  walker_display.hpp
apps/project1/assets/: Fuv.hdr
apps/project1/assets/materials/: textured_mesh.json
apps/project1/assets/models/: character.fbx  marker.glb  marker_big.glb  sphere.glb
apps/project1/assets/models/cabinroom/: cabinroom.gltf
apps/project1/assets/models/cube/: cube.gltf
apps/project1/assets/models/firefly/: firefly.gltf
apps/project1/assets/models/floor/: floor.gltf
apps/project1/assets/models/marble_cube/: cube.gltf
apps/project1/assets/models/pedestal/: pedestal.gltf
apps/project1/assets/models/robot_arm/: robot_arm.gltf
apps/project1/assets/models/room/: room.blend  room.blend1  room.gltf
apps/project1/assets/models/ruinwall/: ruin_wall.gltf
apps/project1/assets/models/sculpture/: sculpture.gltf
apps/project1/assets/models/terrain/: terrain.gltf
apps/project1/assets/models/tree/: tree.gltf
apps/project1/assets/prototypes/: control_point_marker.json  curve_mark.json  curve_path.json  firefly.json  local_light.json  punctual_light.json  stick.json  tree.json
apps/project1/assets/scenes/: scene.json  scene_anim.json  scene_physics.json
apps/project1/assets/skydome/: foo.hdr  output.hdr
apps/sample_filter/: CMakeLists.txt  samplefilter.cpp
art/: cabinroom.blend  cabinroom.blend1  firefly.blend  firefly.blend1  floor.blend  floor.blend1  monkey.blend  pedestal.blend  pedestal.blend1  room.blend  ruin_wall.blend  ruin_wall.blend1  sculpture.blend  sculpture.blend1  sibenik-cathedral-vray.fbx  terrain.blend  terrain.blend1  tree.blend  tree.blend1  ypos.psd
cmake_modules/: add_assimp.cmake  add_eigen.cmake  add_glfw.cmake  add_spdlog.cmake
docs/: ComponentBits.md
include/asset/: asset_loader.hpp  assimp_material.hpp  assimp_mesh.hpp  assimp_model.hpp  assimp_scene_asset.hpp  assimp_vertex.hpp  bone_flattener.hpp  component_loader.hpp  rigged_mesh.hpp  rigged_vertex.hpp  scene.hpp  scene_entity.hpp  scene_hydrater.hpp  scene_tracker.hpp  texture_asset.hpp
include/audio/: audio_listener.hpp  audio_system.hpp
include/core/: frame_limiter.hpp  frame_timer.hpp  glfw_context.hpp  input_manager.hpp  startup_config.hpp
include/ecs/: component.hpp  system_base.hpp
include/engine-ui/: assimp_model_display.hpp  developer_console.hpp  fps_display.hpp  imgui_overlay.hpp  participating_medium_display.hpp  scene_settings_display.hpp  view.hpp
include/events/: event.hpp  event_exchange.hpp  event_maps.hpp  future_invoke.hpp  listener.hpp
include/math/: cross_product_matrix.hpp  curve.hpp  interpolate.hpp  quat.hpp
include/memory/: alignment.hpp  pool_allocator.hpp  pool_memory_block.hpp  typed_pool_allocator.hpp
include/physics/: component_bits.hpp  model.hpp  physics_update.hpp  point_cloud.hpp  point_mass.hpp  rigid_body.hpp  rigid_body_loader.hpp  rk4.hpp  spring.hpp
include/platform/: sleeper.hpp
include/renderer/: additional_material_property.hpp  airlight_mesh.hpp  ambient_light.hpp  ambient_light_loader.hpp  animation_time.hpp  (+51 more)
src/: CMakeLists.txt
src/asset/: CMakeLists.txt  asset_loader.cpp  assimp_mesh.cpp  assimp_model.cpp  rigged_mesh.cpp  scene.cpp  scene_entity.cpp  scene_hydrater.cpp  scene_tracker.cpp
src/audio/: CMakeLists.txt
src/core/: CMakeLists.txt  frame_limiter.cpp  frame_timer.cpp  glfw_context.cpp  input_manager.cpp  startup_config.cpp
src/ecs/: CMakeLists.txt
src/memory/: CMakeLists.txt  alignment.cpp  pool_allocator.cpp  pool_memory_block.cpp
src/physics/: CMakeLists.txt  model.cpp  physics_update.cpp  point_cloud.cpp  point_mass.cpp  rigid_body.cpp  rigid_body_loader.cpp  rk4.cpp  spring.cpp
src/renderer/: CMakeLists.txt  airlight_mesh.cpp  ambient_light.cpp  ambient_light_loader.cpp  animator.cpp  assimp_vram_loader.cpp  camera.cpp  camera_loader.cpp  camera_update_system.cpp  compute_shader_program.cpp  directional_light.cpp  directional_light_loader.cpp  gaussian_weights.cpp  ik.cpp  local_punctual_light.cpp  local_punctual_light_loader.cpp  model_instance.cpp  model_loader.cpp  opengl_context.cpp  participating_medium.cpp  program_info.cpp  projections.cpp  punctual_light.cpp  punctual_light_loader.cpp  render_pass.cpp  render_pass_opengl_state.cpp  render_system.cpp  rigged_model_instance.cpp  rigged_model_loader.cpp  scene_settings.cpp  shader_program.cpp  skeletal_animation.cpp  skeleton_joint.cpp  skeleton_structs.cpp  timeline.cpp  uniform_location_lookup.cpp
src/renderer/shaders/: airlight.frag  airlight.vert  ambient_occlusion.frag  bilateral_horizontal.comp  bilateral_vertical.comp  default.frag  default.vert  directional_shadow.frag  directional_shadow.vert  directional_shadow_rigged.vert  draw_texture.frag  dual_paraboloid_shadow.frag  dual_paraboloid_shadow.vert  gaussian_horizontal.comp  gaussian_vertical.comp  geometry_pass.frag  geometry_pass.vert  lighting_pass.frag  local_light_pass.frag  local_light_pass.vert  rigged_geometry_pass.frag  rigged_geometry_pass.vert  skybox.frag  skybox.vert  skydome.frag  skydome.vert
src/transforms/: CMakeLists.txt  freefly_component.cpp  freely_system.cpp  transform.cpp  transform_loader.cpp  transform_system.cpp
test/: CMakeLists.txt
test/core/: core_tests.cpp
test/ecs/: archetype_pool_tests.h  components.h  entity_state_tests.h  entity_world_tests.h
test/events/: events_tests.cpp
test/math/: curve_tests.cpp  curve_tests.hpp  math_tests.cpp  quat_tests.cpp  quat_tests.hpp
test/physics/: physics_test.cpp  point.cpp  point.hpp
test/platform/: platform_tests.cpp
test/renderer/: CMakeLists.txt  renderer_tests.cpp
(+22 files in other folders)
